--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "browserify-shim": "^3.8.14",
+    "ejs": "^2.7.1",
     "express": "^4.17.1",
+    "joi": "^14.3.1",
     "mongodb": "^3.3.3",
     "save": "^2.4.0"
   }
